added notes link

--- a/new/index.html
+++ b/new/index.html
@@ -87,7 +87,7 @@
 					<b>Upsilon Pi Epsilon</b> I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
 					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel 
 					free to explore <a id="goto" href="#work" onclick="changeContent(event)">my work</a> and <a href="../Jahan Kuruvilla Cherian Resume.pdf" target="_blank">resume</a>, 
-					browse my publicly available notes, and reach out to me through any of my social profiles so that we can do great things together!
+					browse my publicly available <a id="goto" href="#notes" onclick="changeContent(event)">notes</a>, and reach out to me through any of my social profiles so that we can do great things together!
 					</p>
 				</div>
 				<div id="work" class="work">
