Added project information section

--- a/new/index.html
+++ b/new/index.html
@@ -96,7 +96,7 @@
 					</div>
 					<div class="projects row">
 						<div class="project-container">
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell" onclick="showDetail(event)">
 								<h5 class="projectCell"> Future Without Borders </h5>
 								<div class="projectContent">
 									<img src="images/FWB.png" alt="Future Without Borders">
@@ -138,6 +138,28 @@
 								</div>
 								<p class="description"> See and feel the brain like never before </p>
 							</div>
+						</div>
+					</div>
+					<div class="project-info">
+						<div class="cancel" onclick="cancel(event)">
+							<img src="images/x.png" alt="Go Back">
+						</div>
+						<div class="project-info-container">
+							<div class="project-title">
+								<h3> Future Without Borders </h3>
+							</div>
+							<div class="project-media">
+								<img src="images/FWB-iphone.png" alt="Future Without Borders Iphone mockup">
+							</div>
+							<div class="project-details">
+								<p> <b>Platform:</b> iOS <br>
+								<b>Languages:</b> Swift, Objective-C <br>
+								<b>Creation:</b> SD Hacks, October 2015 <br>
+								<b>Awards:</b> Facebook<br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
+							</div>	
 						</div>
 					</div>
 				</div>
