Added some changes to work section

--- a/new/index.html
+++ b/new/index.html
@@ -92,49 +92,57 @@
 				</div>
 				<div id="work" class="work">
 					<div class="work-text">
-						<p> This is where some information about my work life goes </p>
+						<p> Through my classes at UCLA, I have gained a deep understanding and knowledge of <b>C</b> and <b>C++</b> 
+						along with low-level systems programming. Such knowledge along with Computer graphics, enabled me to work on 
+						graphic call serialization for IPC for AutoCAD at <a href="http://www.autodesk.com/" target="_blank">Autodesk</a>
+						this past summer. In my free time I am an avid <b>iOS developer</b> as showcased by the projects listed below, 
+						and occasionally venture out of my comfort zone and involve myself with <b>VR</b>, <b>game development</b>
+						and general <b>Python</b> and <b>BASH</b> scripting.<br>
+
+						If my work or skillset interest you, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Working%20together%20" target="_top">contact me</a>!
+						</p>
 					</div>
 					<div class="projects row">
 						<div class="project-container">
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell" onclick="showDetail(event)">
+							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 								<h5 class="projectCell"> Future Without Borders </h5>
 								<div class="projectContent">
-									<img src="images/FWB.png" alt="Future Without Borders">
+									<img onclick="showDetail(event)" src="images/FWB.png" alt="Future Without Borders">
 								</div>
 								<p class="description"> Helping connect humans for humans </p>
 							</div>
 							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 								<h5 class="projectCell"> Lighthouse </h5>
 								<div class="projectContent">
-									<img src="images/Lighthouse.png" alt="Lighthouse">
+									<img onclick="showDetail(event)" src="images/Lighthouse.png" alt="Lighthouse">
 								</div>
 								<p class="description"> Changing safety one click at a time </p>
 							</div>
 							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 								<h5 class="projectCell"> Stitch</h5>
 								<div class="projectContent">
-									<img src="images/Stitch.png" alt="Stitch">
+									<img onclick="showDetail(event)" src="images/Stitch.png" alt="Stitch">
 								</div>
 								<p class="description"> Filters on LSD </p>
 							</div>
 							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 								<h5 class="projectCell"> Quotebook </h5>
 								<div class="projectContent">
-									<img src="images/Quotebook.png" alt="Quotebook">
+									<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
 								</div>
 								<p class="description"> Remember your loved ones like never before </p>
 							</div>
 							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 								<h5 class="projectCell"> Scavenger </h5>
 								<div class="projectContent">
-									<img src="images/Scavenger.png" alt="Scavenger">
+									<img onclick="showDetail(event)" src="images/Scavenger.png" alt="Scavenger">
 								</div>
 								<p class="description"> Leave messages on maps for others to find </p>
 							</div>
 							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 								<h5 class="projectCell"> BrainSpace VR</h5>
 								<div class="projectContent">
-									<img src="images/BrainSpace.png" alt="BrainSpace VR">
+									<img onclick="showDetail(event)" src="images/BrainSpace.png" alt="BrainSpace VR">
 								</div>
 								<p class="description"> See and feel the brain like never before </p>
 							</div>
@@ -146,7 +154,7 @@
 						</div>
 						<div class="project-info-container">
 							<div class="project-title">
-								<h3> Future Without Borders </h3>
+								<h3>Future Without Borders</h3>
 							</div>
 							<div class="project-media">
 								<img src="images/FWB-iphone.png" alt="Future Without Borders Iphone mockup">
@@ -155,7 +163,25 @@
 								<p> <b>Platform:</b> iOS <br>
 								<b>Languages:</b> Swift, Objective-C <br>
 								<b>Creation:</b> SD Hacks, October 2015 <br>
-								<b>Awards:</b> Facebook<br>
+								<b>Awards:</b> Best Use of IBM Bluemix [IBM at SDHacks], Most Entrepreneurially Viable Hack [Perkins Coie at SDHacks], Hack That Best Connects Us [ViaSat at SDHacks],
+								Most Innovative Award [Facebook at ACM Hacker Expo 2015], Individuals Impacted [IBM at Bluemixathon]<br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
+							</div>	
+						</div>
+						<div class="project-info-container">
+							<div class="project-title">
+								<h3>Lighthouse</h3>
+							</div>
+							<div class="project-media">
+								<img src="images/lighthouse-iphone.png" alt="Lighthouse">
+							</div>
+							<div class="project-details">
+								<p> <b>Platform:</b> iOS <br>
+								<b>Languages:</b> Swift, Objective-C <br>
+								<b>Creation:</b> HackSC, November 2015 <br>
+								<b>Awards:</b> Best Mobile Hack<br>
 								<b>Details:</b><br>
 								This app was created for ...
 								</p>
@@ -165,7 +191,13 @@
 				</div>
 				<div id="notes" class="notes">
 					<div class="notes-text">
-						<p> This is where some information about my notes goes </p>
+						<p> The notes below are a collection of my own understandings of the material and snippets from resources provided 
+						to us through the classes offered at UCLA. Feel free to use these notes however you wish to, but remember to always use them as 
+						a <b>secondary source to your own learnings</b> from your respective classes as each professor’s material varies slightly.
+						If you ever feel like you’re struggling in any classes within the STEM field, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Tutoring%20help" target="_top"> 
+							contact me</a> as a tutor or visit our <a href="https://upe.seas.ucla.edu/tutoring/" target="_blank">UPE</a> and 
+						<a href="http://www.seasoasa.ucla.edu/need-tutoring/" target="_blank">TBP</a> schedules to come to our free weekly tutoring and review sessions!
+						</p>
 					</div>
 					<div class="projects row">
 						<div class="project-container">
