Added a link to Autodesk in About

--- a/new/index.html
+++ b/new/index.html
@@ -78,7 +78,7 @@
 					but also the ability to convey my ideas and share my experiences and learnings that allows me to help shape the lives around me for the better.<br>
 					As an avid <b>iOS developer</b> and ambitious <b>systems programmer</b>, I hope to use my skills in the field of software engineering to guide people and 
 					companies to a higher level. I have worked with several people to bring about some impactful applications, and have worked with well reputed companies like 
-					<b>Autodesk</b> to help push the boundaries of existing products.<br>
+					<a href="http://www.autodesk.com/" target="_blank">Autodesk</a> to help push the boundaries of existing products.<br>
 					But my passion doesn’t stop at the intricacies of computer science, they continue to flow into the field of art through the form of <b>graphic design and illustration</b>. 
 					Working through <b>Sketch</b> I use my intuition and gut feeling to design the best possible UI/UX that goes into my apps, and follow through by creating 
 					the graphics that truly resonate with who I am. <br>
