Added Stitch image

--- a/new/index.html
+++ b/new/index.html
@@ -187,6 +187,23 @@
 								</p>
 							</div>	
 						</div>
+						<div class="project-info-container">
+							<div class="project-title">
+								<h3>Stitch</h3>
+							</div>
+							<div class="project-media">
+								<img src="images/stitch-iphone.png" alt="Stitch">
+							</div>
+							<div class="project-details">
+								<p> <b>Platform:</b> iOS <br>
+								<b>Languages:</b> Swift, Objective-C <br>
+								<b>Creation:</b> LA Hacks, April 2016 <br>
+								<b>Awards:</b> Third Place <br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
+							</div>	
+						</div>
 					</div>
 				</div>
 				<div id="notes" class="notes">
