--- a/new/index.html
+++ b/new/index.html
@@ -204,6 +204,55 @@
 								</p>
 							</div>	
 						</div>
+						<div class="project-info-container">
+							<div class="project-title">
+								<h3>Quotebook</h3>
+							</div>
+							<div class="project-media">
+								<img src="images/quotebook-iphone.png" alt="Quotebook">
+							</div>
+							<div class="project-details">
+								<p> <b>Platform:</b> iOS <br>
+								<b>Languages:</b> Swift<br>
+								<b>Creation:</b> Personal, August 2016 <br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
+							</div>	
+						</div>
+						<div class="project-info-container">
+							<div class="project-title">
+								<h3>Scavenger</h3>
+							</div>
+							<div class="project-media">
+								<img src="images/scavenger-iphone.png" alt="Scavenger">
+							</div>
+							<div class="project-details">
+								<p> <b>Platform:</b> iOS <br>
+								<b>Languages:</b> Swift<br>
+								<b>Creation:</b> CSM117 - UCLA, May 2016 <br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
+							</div>	
+						</div>
+						<div class="project-info-container">
+							<div class="project-title">
+								<h3>BrainSpace VR</h3>
+							</div>
+							<div class="project-media">
+								<img src="images/brainspace-vr.jpg" alt="BrainSpace VR">
+							</div>
+							<div class="project-details">
+								<p> <b>Platform:</b> Oculus, Myo Armband, Muse Headband <br>
+								<b>Languages:</b> C#, Python<br>
+								<b>Creation:</b> CalHacks 2.0, October 2015 <br>
+								<b>Awards:</b> Top Five <br>
+								<b>Details:</b><br>
+								This app was created for ...
+								</p>
+							</div>	
+						</div>
 					</div>
 				</div>
 				<div id="notes" class="notes">
