--- a/new/index.html
+++ b/new/index.html
@@ -54,14 +54,14 @@
 							</div>
 						</div>
 						<div class="work-contains">
-						<div id="code-nav" class="items sub-items">
-								<a href="#code">
+						<div onclick="switchWorkContent(event)" id="code-nav" class="items sub-items">
+								<a href="#code" onclick="return false">
 									<img class="off" src="images/code_img_off.png">
 									<img class="on" src="images/code_img.png">
 								</a>
 							</div>
-							<div id="design-nav" class="items sub-items">
-								<a href="#design">
+							<div onclick="switchWorkContent(event)" id="design-nav" class="items sub-items">
+								<a href="#design" onclick="return false">
 									<img class="off" src="images/design_img_off.png">
 									<img class="on" src="images/design_img.png">
 								</a>
@@ -91,167 +91,192 @@
 					</p>
 				</div>
 				<div id="work" class="work">
-					<div class="work-text">
-						<p> Through my classes at UCLA, I have gained a deep understanding and knowledge of <b>C</b> and <b>C++</b> 
-						along with low-level systems programming. Such knowledge along with Computer graphics, enabled me to work on 
-						graphic call serialization for IPC for AutoCAD at <a href="http://www.autodesk.com/" target="_blank">Autodesk</a>
-						this past summer. In my free time I am an avid <b>iOS developer</b> as showcased by the projects listed below, 
-						and occasionally venture out of my comfort zone and involve myself with <b>VR</b>, <b>game development</b>
-						and general <b>Python</b> and <b>BASH</b> scripting.<br>
+					<div id="code" class="code">
+						<div class="work-text">
+							<p> Through my classes at UCLA, I have gained a deep understanding and knowledge of <b>C</b> and <b>C++</b> 
+							along with low-level systems programming. Such knowledge along with Computer graphics, enabled me to work on 
+							graphic call serialization for IPC for AutoCAD at <a href="http://www.autodesk.com/" target="_blank">Autodesk</a>
+							this past summer. In my free time I am an avid <b>iOS developer</b> as showcased by the projects listed below, 
+							and occasionally venture out of my comfort zone and involve myself with <b>VR</b>, <b>game development</b>
+							and general <b>Python</b> and <b>BASH</b> scripting.<br>
 
-						If my work or skillset interest you, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Working%20together%20" target="_top">contact me</a>!
-						</p>
+							If my work or skillset interest you, feel free to <a href="mailto:jcherian@g.ucla.edu?Subject=Working%20together%20" target="_top">contact me</a>!
+							</p>
+						</div>
+						<div class="projects row">
+							<div class="project-container">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Future Without Borders </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/FWB.png" alt="Future Without Borders">
+									</div>
+									<p class="description"> Helping connect humans for humans </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Lighthouse </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/Lighthouse.png" alt="Lighthouse">
+									</div>
+									<p class="description"> Changing safety one click at a time </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Stitch</h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/Stitch.png" alt="Stitch">
+									</div>
+									<p class="description"> Filters on LSD </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Quotebook </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
+									</div>
+									<p class="description"> Remember your loved ones like never before </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Scavenger </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/Scavenger.png" alt="Scavenger">
+									</div>
+									<p class="description"> Leave messages on maps for others to find </p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> BrainSpace VR</h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/BrainSpace.png" alt="BrainSpace VR">
+									</div>
+									<p class="description"> See and feel the brain like never before </p>
+								</div>
+							</div>
+						</div>
+						<div class="project-info">
+							<div class="cancel" onclick="cancel(event)">
+								<img src="images/x.png" alt="Go Back">
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Future Without Borders</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/FWB-iphone.png" alt="Future Without Borders Iphone mockup">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> iOS <br>
+									<b>Languages:</b> Swift, Objective-C <br>
+									<b>Creation:</b> SD Hacks, October 2015 <br>
+									<b>Awards:</b> Best Use of IBM Bluemix [IBM at SDHacks], Most Entrepreneurially Viable Hack [Perkins Coie at SDHacks], Hack That Best Connects Us [ViaSat at SDHacks],
+									Most Innovative Award [Facebook at ACM Hacker Expo 2015], Individuals Impacted [IBM at Bluemixathon]<br>
+									<b>Details:</b><br>
+									This app was created for ...
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Lighthouse</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/lighthouse-iphone.png" alt="Lighthouse">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> iOS <br>
+									<b>Languages:</b> Swift, Objective-C <br>
+									<b>Creation:</b> HackSC, November 2015 <br>
+									<b>Awards:</b> Best Mobile Hack<br>
+									<b>Details:</b><br>
+									This app was created for ...
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Stitch</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/stitch-iphone.png" alt="Stitch">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> iOS <br>
+									<b>Languages:</b> Swift, Objective-C <br>
+									<b>Creation:</b> LA Hacks, April 2016 <br>
+									<b>Awards:</b> Third Place <br>
+									<b>Details:</b><br>
+									This app was created for ...
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Quotebook</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/quotebook-iphone.png" alt="Quotebook">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> iOS <br>
+									<b>Languages:</b> Swift<br>
+									<b>Creation:</b> Personal, August 2016 <br>
+									<b>Details:</b><br>
+									This app was created for ...
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>Scavenger</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/scavenger-iphone.png" alt="Scavenger">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> iOS <br>
+									<b>Languages:</b> Swift<br>
+									<b>Creation:</b> CSM117 - UCLA, May 2016 <br>
+									<b>Details:</b><br>
+									This app was created for ...
+									</p>
+								</div>	
+							</div>
+							<div class="project-info-container">
+								<div class="project-title">
+									<h3>BrainSpace VR</h3>
+								</div>
+								<div class="project-media">
+									<img src="images/brainspace-vr.jpg" alt="BrainSpace VR">
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> Oculus, Myo Armband, Muse Headband <br>
+									<b>Languages:</b> C#, Python<br>
+									<b>Creation:</b> CalHacks 2.0, October 2015 <br>
+									<b>Awards:</b> Top Five <br>
+									<b>Details:</b><br>
+									This app was created for ...
+									</p>
+								</div>	
+							</div>
+						</div>
 					</div>
-					<div class="projects row">
-						<div class="project-container">
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Future Without Borders </h5>
-								<div class="projectContent">
-									<img onclick="showDetail(event)" src="images/FWB.png" alt="Future Without Borders">
+					<div id="design" class="design">
+						<div class="design-text">
+							<p> This is where my information about my design projects will go. </p>
+						</div>
+						<div class="projects row">
+							<div class="project-container">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Boat in a Bottle </h5>
+									<div class="projectContent">
+										<img src="images/D_1_Boat.png" alt="Boat in a Bottle" style="width:200px; height:200px;">
+									</div>
+									<p class="description"> Some information about the design</p>
 								</div>
-								<p class="description"> Helping connect humans for humans </p>
-							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Lighthouse </h5>
-								<div class="projectContent">
-									<img onclick="showDetail(event)" src="images/Lighthouse.png" alt="Lighthouse">
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Remembering the great</h5>
+									<div class="projectContent">
+										<img  src="images/D_2_Ali.png" alt="Remembering the great" style="width:200px; height:200px;">
+									</div>
+									<p class="description"> Some information about the design</p>
 								</div>
-								<p class="description"> Changing safety one click at a time </p>
 							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Stitch</h5>
-								<div class="projectContent">
-									<img onclick="showDetail(event)" src="images/Stitch.png" alt="Stitch">
-								</div>
-								<p class="description"> Filters on LSD </p>
-							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Quotebook </h5>
-								<div class="projectContent">
-									<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
-								</div>
-								<p class="description"> Remember your loved ones like never before </p>
-							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> Scavenger </h5>
-								<div class="projectContent">
-									<img onclick="showDetail(event)" src="images/Scavenger.png" alt="Scavenger">
-								</div>
-								<p class="description"> Leave messages on maps for others to find </p>
-							</div>
-							<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-								<h5 class="projectCell"> BrainSpace VR</h5>
-								<div class="projectContent">
-									<img onclick="showDetail(event)" src="images/BrainSpace.png" alt="BrainSpace VR">
-								</div>
-								<p class="description"> See and feel the brain like never before </p>
-							</div>
-						</div>
-					</div>
-					<div class="project-info">
-						<div class="cancel" onclick="cancel(event)">
-							<img src="images/x.png" alt="Go Back">
-						</div>
-						<div class="project-info-container">
-							<div class="project-title">
-								<h3>Future Without Borders</h3>
-							</div>
-							<div class="project-media">
-								<img src="images/FWB-iphone.png" alt="Future Without Borders Iphone mockup">
-							</div>
-							<div class="project-details">
-								<p> <b>Platform:</b> iOS <br>
-								<b>Languages:</b> Swift, Objective-C <br>
-								<b>Creation:</b> SD Hacks, October 2015 <br>
-								<b>Awards:</b> Best Use of IBM Bluemix [IBM at SDHacks], Most Entrepreneurially Viable Hack [Perkins Coie at SDHacks], Hack That Best Connects Us [ViaSat at SDHacks],
-								Most Innovative Award [Facebook at ACM Hacker Expo 2015], Individuals Impacted [IBM at Bluemixathon]<br>
-								<b>Details:</b><br>
-								This app was created for ...
-								</p>
-							</div>	
-						</div>
-						<div class="project-info-container">
-							<div class="project-title">
-								<h3>Lighthouse</h3>
-							</div>
-							<div class="project-media">
-								<img src="images/lighthouse-iphone.png" alt="Lighthouse">
-							</div>
-							<div class="project-details">
-								<p> <b>Platform:</b> iOS <br>
-								<b>Languages:</b> Swift, Objective-C <br>
-								<b>Creation:</b> HackSC, November 2015 <br>
-								<b>Awards:</b> Best Mobile Hack<br>
-								<b>Details:</b><br>
-								This app was created for ...
-								</p>
-							</div>	
-						</div>
-						<div class="project-info-container">
-							<div class="project-title">
-								<h3>Stitch</h3>
-							</div>
-							<div class="project-media">
-								<img src="images/stitch-iphone.png" alt="Stitch">
-							</div>
-							<div class="project-details">
-								<p> <b>Platform:</b> iOS <br>
-								<b>Languages:</b> Swift, Objective-C <br>
-								<b>Creation:</b> LA Hacks, April 2016 <br>
-								<b>Awards:</b> Third Place <br>
-								<b>Details:</b><br>
-								This app was created for ...
-								</p>
-							</div>	
-						</div>
-						<div class="project-info-container">
-							<div class="project-title">
-								<h3>Quotebook</h3>
-							</div>
-							<div class="project-media">
-								<img src="images/quotebook-iphone.png" alt="Quotebook">
-							</div>
-							<div class="project-details">
-								<p> <b>Platform:</b> iOS <br>
-								<b>Languages:</b> Swift<br>
-								<b>Creation:</b> Personal, August 2016 <br>
-								<b>Details:</b><br>
-								This app was created for ...
-								</p>
-							</div>	
-						</div>
-						<div class="project-info-container">
-							<div class="project-title">
-								<h3>Scavenger</h3>
-							</div>
-							<div class="project-media">
-								<img src="images/scavenger-iphone.png" alt="Scavenger">
-							</div>
-							<div class="project-details">
-								<p> <b>Platform:</b> iOS <br>
-								<b>Languages:</b> Swift<br>
-								<b>Creation:</b> CSM117 - UCLA, May 2016 <br>
-								<b>Details:</b><br>
-								This app was created for ...
-								</p>
-							</div>	
-						</div>
-						<div class="project-info-container">
-							<div class="project-title">
-								<h3>BrainSpace VR</h3>
-							</div>
-							<div class="project-media">
-								<img src="images/brainspace-vr.jpg" alt="BrainSpace VR">
-							</div>
-							<div class="project-details">
-								<p> <b>Platform:</b> Oculus, Myo Armband, Muse Headband <br>
-								<b>Languages:</b> C#, Python<br>
-								<b>Creation:</b> CalHacks 2.0, October 2015 <br>
-								<b>Awards:</b> Top Five <br>
-								<b>Details:</b><br>
-								This app was created for ...
-								</p>
-							</div>	
 						</div>
 					</div>
 				</div>
