--- a/new/index.html
+++ b/new/index.html
@@ -47,7 +47,7 @@
 								</a>
 							</div>
 							<div onclick="changeContent(event)" class="items">
-								<a href="/">
+								<a href="#contact" onclick="return false">
 									<img class="off" src="images/contact_img_off.png">
 									<img class="on" src="images/contact_img.png">
 								</a>
@@ -265,14 +265,42 @@
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Boat in a Bottle </h5>
 									<div class="projectContent">
-										<img src="images/D_1_Boat.png" alt="Boat in a Bottle" style="width:200px; height:200px;">
+										<img src="images/D_1_Boat.png" alt="Boat in a Bottle">
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Remembering the great</h5>
 									<div class="projectContent">
-										<img  src="images/D_2_Ali.png" alt="Remembering the great" style="width:200px; height:200px;">
+										<img  src="images/D_2_Ali.png" alt="Remembering the great">
+									</div>
+									<p class="description"> Some information about the design</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> National Parks</h5>
+									<div class="projectContent">
+										<img  src="images/D_4_National_Park.png" alt="National Parks"> 
+									</div>
+									<p class="description"> Some information about the design</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Campfire </h5>
+									<div class="projectContent">
+										<img  src="images/D_5_Camp_Fire.png" alt="Campfire">
+									</div>
+									<p class="description"> Some information about the design</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Rocket Science</h5>
+									<div class="projectContent">
+										<img  src="images/D_6_Rocket_Computer.png" alt="Rocket Science">
+									</div>
+									<p class="description"> Some information about the design</p>
+								</div>
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Remembering the great</h5>
+									<div class="projectContent">
+										<img  src="images/D_2_Ali.png" alt="Remembering the great">
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
@@ -315,7 +343,11 @@
 							</div>
 						</div>
 					</div>
-
+				</div>
+				<div id="contact" class="contact" style="width:100%;">
+					<!-- Change the width and height values to suit you best -->
+					<div class="typeform-widget" data-url="https://jahan4.typeform.com/to/z52fbB" data-text="Website Contact" style=" padding-top: -300px; width:100%;height:500px;"></div>
+					<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'widget.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
 				</div>
 			</div>
 			<div class="footer-wrapper">
