--- a/new/index.html
+++ b/new/index.html
@@ -258,7 +258,10 @@
 					</div>
 					<div id="design" class="design">
 						<div class="design-text">
-							<p> This is where my information about my design projects will go. </p>
+							<p> I have always had a passion for art and visual effects, and just recently started to express that through some graphic design
+							using vector illustration. My current design focuses on very flat design, made entirely in <a href="https://www.sketchapp.com/" target="_blank">Sketch</a>.
+							I am slowly finding more and more interest in the field of <b>product design</b> and am hoping to expand my design skillset. If you have any tips and advice or want to work with me in the design space, feel free to
+							<a href="#contact" onclick="changeContent(event)">contact me</a> as I would love to hear from you! </p>
 						</div>
 						<div class="projects row">
 							<div class="project-container">
