Changed contact ref in design

--- a/new/index.html
+++ b/new/index.html
@@ -261,7 +261,7 @@
 							<p> I have always had a passion for art and visual effects, and just recently started to express that through some graphic design
 							using vector illustration. My current design focuses on very flat design, made entirely in <a href="https://www.sketchapp.com/" target="_blank">Sketch</a>.
 							I am slowly finding more and more interest in the field of <b>product design</b> and am hoping to expand my design skillset. If you have any tips and advice or want to work with me in the design space, feel free to
-							<a href="#contact" onclick="changeContent(event)">contact me</a> as I would love to hear from you! </p>
+							<a href="mailto:jcherian@g.ucla.eduu?Subject=Design" target="_top">contact me</a> as I would love to hear from you! </p>
 						</div>
 						<div class="projects row">
 							<div class="project-container">
