Added some changes to design layout, and made main logo clickable

--- a/new/index.html
+++ b/new/index.html
@@ -20,7 +20,7 @@
 			<div class="upper-nav">
 				<div class="my-logo">
 					<span class="main-logo">
-						<a href="#about" onclick="return false">
+						<a href="#about" onclick="goHome(event)">
 							<img src="images/logo.png" >
 						</a>
 					</span>
@@ -265,45 +265,45 @@
 						</div>
 						<div class="projects row">
 							<div class="project-container">
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Boat in a Bottle </h5>
 									<div class="projectContent">
 										<img src="images/D_1_Boat.png" alt="Boat in a Bottle">
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Remembering the great</h5>
 									<div class="projectContent">
 										<img  src="images/D_2_Ali.png" alt="Remembering the great">
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> National Parks</h5>
 									<div class="projectContent">
 										<img  src="images/D_4_National_Park.png" alt="National Parks"> 
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Campfire </h5>
 									<div class="projectContent">
 										<img  src="images/D_5_Camp_Fire.png" alt="Campfire">
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Rocket Science</h5>
 									<div class="projectContent">
 										<img  src="images/D_6_Rocket_Computer.png" alt="Rocket Science">
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
-								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
-									<h5 class="projectCell"> Remembering the great</h5>
+								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
+									<h5 class="projectCell"> Place of work</h5>
 									<div class="projectContent">
-										<img  src="images/D_2_Ali.png" alt="Remembering the great">
+										<img  src="images/D_7_Desk.png" alt="Place of work">
 									</div>
 									<p class="description"> Some information about the design</p>
 								</div>
