Added some content

--- a/new/index.html
+++ b/new/index.html
@@ -167,7 +167,16 @@
 									<b>Awards:</b> Best Use of IBM Bluemix [IBM at SDHacks], Most Entrepreneurially Viable Hack [Perkins Coie at SDHacks], Hack That Best Connects Us [ViaSat at SDHacks],
 									Most Innovative Award [Facebook at ACM Hacker Expo 2015], Individuals Impacted [IBM at Bluemixathon]<br>
 									<b>Details:</b><br>
-									This app was created for ...
+									Future without borders was conceived and created around the peak of the <a href="https://www.mercycorps.org/articles/iraq-jordan-lebanon-syria-turkey/quick-facts-what-you-need-know-about-syria-crisis" target="_blank">Syrian Refugee Crisis</a>
+									in order to try and provide help to the fleeing refugees that entered these new countries, hopeful to start a new life.<br>
+									Following a pattern similar to that of AirBnb, we decided to build out an iOS application that would be ideally used by the citizens of the countries accepting refugees at the time, to allow these "hosts"
+									to see any nearby refugee family that might be in need of assistance. The app would allow the host to provide aid to the family selected by picking them up from the nearby locaiton and hosting them for a few days
+									to help them start their new lives.<br>
+									On the refugee side, we assumed the access to a smartphone would be limited, and so we used <a href="https://www.twilio.com/" target="_blank">Twilio</a>'s API to provide a unique number that the refugees could
+									text to register them as requiring assistance. Based on cellular location we would provide said location to the iOS application.<br>
+									This project won three sponsored awards at SD Hacks and continued to win two more awards from IBM and Facebook. Unfortunately, due to several 
+									unfortunate circumstances, the project fell on the back burner and to this day remains a MVP. More information can be found on the project's
+									<a href="http://devpost.com/software/humans-without-borders-y5bsew" target="_blank">Devpost</a>.
 									</p>
 								</div>	
 							</div>
@@ -184,7 +193,8 @@
 									<b>Creation:</b> HackSC, November 2015 <br>
 									<b>Awards:</b> Best Mobile Hack<br>
 									<b>Details:</b><br>
-									This app was created for ...
+									The weekend of HackSC was also the weekend of the horrible <a href="https://en.wikipedia.org/wiki/November_2015_Paris_attacks" target="_blank">Paris Attacks</a>. Noticing, the
+									lack of an efficient method to warn people, fam
 									</p>
 								</div>	
 							</div>
@@ -267,45 +277,76 @@
 							<div class="project-container">
 								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Boat in a Bottle </h5>
-									<div class="projectContent">
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
 										<img src="images/D_1_Boat.png" alt="Boat in a Bottle">
 									</div>
-									<p class="description"> Some information about the design</p>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p>The Boat in the bottle was my very first illustration 
+										and really pushed me into the space of illustration. Unique to my later designs, it focuses
+										more on gradients and less on flat design. I really wanted to encapsulate a new feeling to the
+										idea of designing a boat, wherein the design could remain simple but be unique to just the generic boat in a sea.</p>
+									</div>
 								</div>
 								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Remembering the great</h5>
-									<div class="projectContent">
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
 										<img  src="images/D_2_Ali.png" alt="Remembering the great">
 									</div>
-									<p class="description"> Some information about the design</p>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> Continuing from my design of the boat I felt like the style of using gradients was really working.
+										This inspired me to create a small token of rememberance to a great fighter and a great man in general. <a href="http://muhammadali.com/" target="_blank">Muhammad Ali</a>.
+										This piece really challenged me to using the vector tool more than ever before. The aesthetic is not as pleasing
+										as the other designs, but stands out to me because it was the tipping point for me to focus on simpler designs, rather
+										than approach a complex piece from a simplistic style.</p>
+									</div>
 								</div>
 								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> National Parks</h5>
-									<div class="projectContent">
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
 										<img  src="images/D_4_National_Park.png" alt="National Parks"> 
 									</div>
-									<p class="description"> Some information about the design</p>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> Wanting to try my newfound skills to more natural landscapes, I went to Google to find the most compelling
+										landscape I could find, and settled on <a href="https://en.wikipedia.org/wiki/Denali_National_Park_and_Preserve" target="_blank">Denali National Park</a> in Alaska.
+										Instead of detailing the landscape, I wanted to try to go for a more simplistic approach, and focused on the beautiful colours of the mountains
+										from all the pictures I could find. As you can see, though there is still a presence of a gradient based design, this piece showcases a focus on
+										a limited colour palette in an attempt to move to a more flat look.</p>
+									</div>
 								</div>
 								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Campfire </h5>
-									<div class="projectContent">
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
 										<img  src="images/D_5_Camp_Fire.png" alt="Campfire">
 									</div>
-									<p class="description"> Some information about the design</p>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> Continuing in my sudden surge of inspiration for nature and its beauty, I decided to undertake creating a campfire. This is
+										my first piece where I truly transition to a flat design, going for simplistic focuses on the fire itself and the background of a large
+										yet beautiful moon. To this date, I continue to believe that this was one of my best pieces as it truly showcases how a simple design
+										can remain beautiful and compelling.</p>
+									</div>
 								</div>
 								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Rocket Science</h5>
-									<div class="projectContent">
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
 										<img  src="images/D_6_Rocket_Computer.png" alt="Rocket Science">
 									</div>
-									<p class="description"> Some information about the design</p>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> Feeling somewhat confident in my newfound skill of illustration, I decided to help a friend of mine out and draw up 
+										a small poster of sorts with this design as its background. Its intent is to attract computer scientists within the Computer Science
+										department at UCLA to try out for the <a href="http://aiaa.seas.ucla.edu/projects.html" target="_blank">UCLA AIAA Rocket Project</a> as it continues to face a lack of strong embedded software engineers. For the curious, the code
+										on the screen does have a sensible translation.</p>
+									</div>
 								</div>
 								<div class="col-xs-12 col-sm-12 col-md-12 projectCell">
 									<h5 class="projectCell"> Place of work</h5>
-									<div class="projectContent">
+									<div class="col-xs-12 col-sm-12 col-md-6 projectContent">
 										<img  src="images/D_7_Desk.png" alt="Place of work">
 									</div>
-									<p class="description"> Some information about the design</p>
+									<div class="col-xs-12 col-sm-12 col-md-6 description">
+										<p> While working at Autodesk and staying in Berkeley, CA, I decided to capture my work environment to share with others of interest.
+										As depicted, my table usually remained pretty minimal with the presence of two laptops, two smart watches, my phone, pair of glasses and my 
+										standard headphones. I chose to go with a top down view to make the visual of the technology around me cleaner.</p>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -406,5 +447,5 @@
 					</div>
 				</div>
 				<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	</body>
-</html>
+			</body>
+		</html>
