--- a/new/index.html
+++ b/new/index.html
@@ -52,6 +52,12 @@
 									<img class="on" src="images/contact_img.png">
 								</a>
 							</div>
+							<div onclick="changeContent(event)" class="items">
+								<a href="#foryou" onclick="return false">
+									<img class="off" src="images/for_you_off.png">
+									<img class="on" src="images/for_you.png">
+								</a>
+							</div>
 						</div>
 						<div class="work-contains">
 						<div onclick="switchWorkContent(event)" id="code-nav" class="items sub-items">
@@ -84,7 +90,7 @@
 					the graphics that truly resonate with who I am. <br>
 					These are my passions, but what are passions if we don’t try and share them with the world… Throughout my schooling journey and beyond, I have always chosen 
 					to <b>teach what I have learnt</b> as best as I could to those willing to learn. As the <b>tutoring chair</b> for both <b>Tau Beta Pi</b> and 
-					<b>Upsilon Pi Epsilon</b> I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
+					<b>Upsilon Pi Epsilon</b> at UCLA, I wish to help those struggling in engineering and computer science find the same love and passion as I have for the field.<br>
 					If you have reached the end of this brief description of me as a person, then I assume you are interested in working with me or meeting me. If so feel 
 					free to explore <a id="goto" href="#work" onclick="changeContent(event)">my work</a> and <a href="../Jahan Kuruvilla Cherian Resume.pdf" target="_blank">resume</a>, 
 					browse my publicly available <a id="goto" href="#notes" onclick="changeContent(event)">notes</a>, and reach out to me through any of my social profiles so that we can do great things together!
@@ -126,12 +132,20 @@
 									</div>
 									<p class="description"> Filters on LSD </p>
 								</div>
+								<!-- Only release information about the app once live
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Quotebook </h5>
 									<div class="projectContent">
 										<img onclick="showDetail(event)" src="images/Quotebook.png" alt="Quotebook">
 									</div>
 									<p class="description"> Remember your loved ones like never before </p>
+								</div>-->
+								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
+									<h5 class="projectCell"> Doodle Fall </h5>
+									<div class="projectContent">
+										<img onclick="showDetail(event)" src="images/Doodle-fall.png" alt="Doodle Fall">
+									</div>
+									<p class="description"> Play. Arcade Style. </p>
 								</div>
 								<div class="col-xs-12 col-sm-6 col-md-4 projectCell">
 									<h5 class="projectCell"> Scavenger </h5>
@@ -194,7 +208,14 @@
 									<b>Awards:</b> Best Mobile Hack<br>
 									<b>Details:</b><br>
 									The weekend of HackSC was also the weekend of the horrible <a href="https://en.wikipedia.org/wiki/November_2015_Paris_attacks" target="_blank">Paris Attacks</a>. Noticing, the
-									lack of an efficient method to warn people, fam
+									lack of an efficient method to warn people, family, friends and law enforcement, we decided to create an easy, single tap solution. From that came Lighthouse, a single
+									tap SOS button located on your home screen. The version built at HackSC used Parse as the backend and was able to notify family members and friends listed in the app of 
+									your danger.<br>
+									After seeing the usefulness of this application, we continued to build it out over a few months, making the application more robust and marketable. We created our backend in Ruby on Rails,
+									hosted on Heroku. The iOS application evolved to have its own networking interface, included requested tracking, pulled daily updated crime events in the area, and acted as a miniature 
+									social media application, aimed at bringing together people for the purpose of safety and crowd-sourced danger reports.<br>
+									After noticing that we couldn't find a decent monetization strategy, the application was abandoned. More information about the application can be found on the 
+									<a href="http://devpost.com/software/lighthouse-9wigoq" target="_blank">Devpost</a> and on the <a href="http://www.lighthouseapp.io/" target="_blank">landing page</a>.
 									</p>
 								</div>	
 							</div>
@@ -211,10 +232,17 @@
 									<b>Creation:</b> LA Hacks, April 2016 <br>
 									<b>Awards:</b> Third Place <br>
 									<b>Details:</b><br>
-									This app was created for ...
+									After reading a paper on <a href="http://arxiv.org/abs/1508.06576" target="_blank">Convolutional Neural Networks and Art</a> we decided to create a mobile application that would make use of the <a href="https://github.com/jcjohnson/neural-style" target="_blank">torch implementation</a>
+									to allow everyday users to get a feel for the true power of Artificial Intelligence in their hands.<br>
+									After running some tests, we found that on a computer such as a Macbook Pro Retina 13" the image rendering took several minutes to a couple of hours, we decided to move the computation to Amazon EC2 servers with more powerful graphics cards.
+									The iOS application was written to take in two images either through your camera roll or through an image address and would send the images to the server managed by node.js, where a BASH script would take the combined image and send it back to the iOS application which would
+									display the results. The app ran well within 5 minutes per image, and was one of the very first versions of mobile CNN's. It placed third overall at LA Hacks.<br>
+									The application was slated to be worked on during Summer of 2016, to create scheduling mechanisms for server loading, but another app beat us to market. More information about the application can be found 
+									at the <a href="http://devpost.com/software/stitch" target="_blank">Devpost</a>.
 									</p>
 								</div>	
 							</div>
+							<!-- Only release to public once the app is live
 							<div class="project-info-container">
 								<div class="project-title">
 									<h3>Quotebook</h3>
@@ -230,7 +258,29 @@
 									This app was created for ...
 									</p>
 								</div>	
-							</div>
+							</div> -->
+							<div class="project-info-container" style="width:100%">
+								<div class="project-title">
+									<h3>Doodle Fall</h3>
+								</div>
+								<div class="project-media">
+									<iframe width="560" height="315" src="https://www.youtube.com/embed/sCSUT1zrvOE" frameborder="0" allowfullscreen></iframe>
+								</div>
+								<div class="project-details">
+									<p> <b>Platform:</b> Nexsys-3 FPGA Board <br>
+									<b>Languages:</b> Verilog <br>
+									<b>Creation:</b> CSM152A - UCLA, May 2016 <br>
+									<b>Details:</b><br>
+									As the final project and submission to CSM152A, my teammate and I built Doodle Fall. This game is a simple one, where the objective of you, the tiny green doodle,
+									is to stay alive as long as possible, by falling downards along the blocks that appear, avoiding hittint the top and bottom of the screen. The score was determined as a function
+									of time. Similarly, the difficulty of the game was also a function of time, wherein the speed of the falling would increase as you lasted longer in the game. The green blocks were
+									powerups that would slow down the speed of falling.<br>
+									This game was made entirely in Verilog, using an FPGA, Joystick, VGA, Seven Segment LED Display and buttons. The game would store the highest score, and would allow you to reset the game.
+									The joystick allowed you to move horizontally with the speed of movement as a function of the movement of the joystick. The VGA took our code and created a simplistic view on any computer
+									monitor. The video above demonstrates the key features of the game.
+									</p>
+								</div>	
+							</div> 
 							<div class="project-info-container">
 								<div class="project-title">
 									<h3>Scavenger</h3>
@@ -388,8 +438,8 @@
 						</div>
 					</div>
 				</div>
-				<div id="contact" class="contact">
-					<div class="contact-box">
+				<div id="contact" class="col-xs-12 col-sm-12 col-md-12 contact">
+					<div class="col-xs-12 col-sm-12 col-md-6 contact-box">
 						<form id="contact-form" action="https://formspree.io/jcherian@g.ucla.edu" method="POST">
 							<fieldset>
 								<input type="text" name="name" placeholder="Name"/>
@@ -402,12 +452,25 @@
 							</fieldset>
 						</form>
 					</div>
-					<div class="contact-info">
+					<div class="col-xs-12 col-sm-12 col-md-6 contact-info">
 						<p> Feel free to send me a message if you have any questions about my experience and <a id="goto" href="#work" onclick="changeContent(event)">work</a>,
 						or if you simply need a freelancer specializing in <b>iOS Development</b> and some <b> design</b>.
 						You can also contact me should you feel my <a id="goto" href="#notes" onclick="changeContent(event)">notes</a> are lacking material or are factually incorrect!
 						If you want a more personal connection point, you can always visit any of my social media as listed at 
 						the bottom of this page. I look forward to hearing from you! </p>
+					</div>
+				</div>
+				<div id="foryou" class="foryou">
+					<div class="foryou-text">
+						<p> Throughout my life, I find some days to be just difficult, or find myself in situations feeling let down. In those intimate
+						moments, I find it refreshing and reassuring to go through some inspiring videos. I can only hope that the video below can help you,
+						get through any difficulty you are currently facing and enable you to come out stronger from it than you were before. <br>
+						All content shared here is credited to the original content creators and to all the references they used: <a href="http://www.mateuszm.com/" target="_blank">Mateusz</a> and
+						<a href="http://princeea.com/" target="_blank">Prince Ea</a>, whose videos and messages have helped me get through some hard days.
+						</p>
+					</div>
+					<div class="foryou-content">
+						<iframe id="vidFrame" width="560" height="315" src="https://www.youtube.com/embed/sCSUT1zrvOE" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
