--- a/new/index.html
+++ b/new/index.html
@@ -466,7 +466,8 @@
 						moments, I find it refreshing and reassuring to go through some inspiring videos. I can only hope that the video below can help you,
 						get through any difficulty you are currently facing and enable you to come out stronger from it than you were before. <br>
 						All content shared here is credited to the original content creators and to all the references they used: <a href="http://www.mateuszm.com/" target="_blank">Mateusz</a> and
-						<a href="http://princeea.com/" target="_blank">Prince Ea</a>, whose videos and messages have helped me get through some hard days.
+						<a href="http://princeea.com/" target="_blank">Prince Ea</a>, whose videos and messages have helped me get through some hard days.<br>
+						If you enjoyed the video, you can <a href="#foryou">refresh</a> to watch some more.
 						</p>
 					</div>
 					<div class="foryou-content">
