--- a/new/index.html
+++ b/new/index.html
@@ -467,7 +467,7 @@
 						get through any difficulty you are currently facing and enable you to come out stronger from it than you were before. <br>
 						All content shared here is credited to the original content creators and to all the references they used: <a href="http://www.mateuszm.com/" target="_blank">Mateusz</a> and
 						<a href="http://princeea.com/" target="_blank">Prince Ea</a>, whose videos and messages have helped me get through some hard days.<br>
-						If you enjoyed the video, you can <a href="#foryou">refresh</a> to watch some more.
+						If you enjoyed the video, you can <a id="goto" href="#foryou" onclick="changeContent(event)">refresh</a> to watch some more.
 						</p>
 					</div>
 					<div class="foryou-content">
