Finished majority of content upload

--- a/new/index.html
+++ b/new/index.html
@@ -293,7 +293,12 @@
 									<b>Languages:</b> Swift<br>
 									<b>Creation:</b> CSM117 - UCLA, May 2016 <br>
 									<b>Details:</b><br>
-									This app was created for ...
+									In order to demostrate our knowledge of networking and real-world application in CSM117, myself and my teammate <a href="http://ckenny9739.bol.ucla.edu" target="_blank">Connor</a>
+									built a small application that leveraged Firebase as our backend.<br>
+									Using Facebook's iOS SDK for login and user authentication and Firebase for data storage and retrieval, we built out an application wherein you, the user can go about
+									your daily life, and if you find anything intersting in the location you're currently at, you can leave either a message about the situation or the place within that location
+									on a global map. Any other user of the app can find that message/photo and view it.<br>
+									The aim of the application was to allow users to share their experiences in a more intimate manner.
 									</p>
 								</div>	
 							</div>
@@ -308,9 +313,14 @@
 									<p> <b>Platform:</b> Oculus, Myo Armband, Muse Headband <br>
 									<b>Languages:</b> C#, Python<br>
 									<b>Creation:</b> CalHacks 2.0, October 2015 <br>
-									<b>Awards:</b> Top Five <br>
+									<b>Awards:</b> Top Five at CalHacks 2.0 <br>
 									<b>Details:</b><br>
-									This app was created for ...
+									In an attempt to work with hardware, my teammates and I took it upon ourselves to make neurology a more immersive experience. The result was BrainSpace VR,
+									wherein you dawn an Oculus Rift headset to find yourself viewing the 3-D model of a human brain. Equipped with the accompanying Myo Armband, you as the user are
+									able to click on different parts of the brain to learn more about it, and are able to rotate and zoom into the brain to experience it like never before.<br>
+									<a href="http://omarozgur.com" target="_blank">Omar Ozgur</a> was primarily involved with writing some of the C# code to work with the Oculus, while I was involved
+									with using Python and the BeauitfulSoup Library to scrape various webpages to find the different informaiton about the different parts of the brain. Together we worked to
+									additionally include the Muse Headband, to allow simultaneous viewing of your own brain wave pattern. More about the product can be found on our <a href="http://devpost.com/software/brain-space-vr" target="_blank">Devpost</a>.
 									</p>
 								</div>	
 							</div>
